# pg-vector

./: .dockerignore  .gitignore  README.md  build.sh  deploy.sh  docker-compose.yml
config/: database_config.json  database_config.local.json  model_config.json
fraud_detection_api/: Dockerfile  pyproject.toml
fraud_detection_api/src/: api.py
fraud_detection_api/src/fraud_detection_api/: api.py
fraud_detection_common/: pyproject.toml
fraud_detection_common/src/fraud_detection_common/: config.py  config_schema.py  database.py  database_config.py  dynamic_model.py  embeddings.py  models.py
fraud_detection_db/: alembic.ini  pyproject.toml
fraud_detection_db/sql/: 01_create_extensions.sql  02_create_tables.sql  03_create_indexes.sql  setup.sql
fraud_detection_db/src/fraud_detection_db/: models.py  setup.py
fraud_detection_db/src/fraud_detection_db/migrations/: env.py
fraud_detection_training/: .env.example  Dockerfile  pyproject.toml  wait-for-db.sh
fraud_detection_training/config/: model_config.json
fraud_detection_training/data/: training_data.csv
fraud_detection_training/src/: train.py
fraud_detection_training/src/fraud_detection_training/: generate_test_data.py  test_config.py  train.py
