[project]
name = "fraud_detection_api"
version = "0.1.0"
description = "API service for fraud detection system"
requires-python = ">=3.9"
dependencies = [
    "fraud_detection_common>=0.1.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "scikit-learn>=1.0.0",  # For feature engineering and PCA
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 