[project]
name = "fraud_detection_common"
version = "0.1.0"
description = "Common utilities and models for fraud detection system"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=1.4.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",  # For feature engineering and PCA
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 