[project]
name = "fraud_detection_db"
version = "0.1.0"
description = "Database setup and migrations for fraud detection system"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 