[project]
name = "fraud_detection_training"
version = "0.1.0"
description = "Training module for fraud detection system"
requires-python = ">=3.9"
dependencies = [
    "fraud_detection_common>=0.1.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.0.0",  # For feature engineering and PCA
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection_training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 